# PDFlow

./: .gitignore  README.md  REDME.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: pdfsvc-cloud-run-deployment.yaml
apps/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
apps/backend/config/: config.py
apps/backend/models/: documents.py
apps/backend/utils/: utils.py
apps/chat-app-backend/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
apps/chat-app-backend/drizzle/: 0000_confused_sleepwalker.sql
apps/chat-app-backend/prisma/: schema.prisma
apps/chat-app-backend/src/: drizzle.config.ts  index.ts  server.ts
apps/chat-app-contract/: package.json
apps/chat-app-frontend/: package-lock.json  package.json  tsconfig.json
apps/chat-app-frontend/components/: ChatBox.tsx  ChatBubble.tsx  Header.tsx  InputBox.tsx
apps/chat-app-frontend/hooks/: UsePDF.ts
apps/chat-frontend/: package.json  pnpm-lock.yaml
apps/chat-frontend/app/: globals.css  layout.tsx  page.tsx
apps/chat-frontend/components/: ClerkAPIProvider.tsx
apps/chat-frontend/context/: ChatContext.tsx
apps/chat-frontend/utils/: api.ts
apps/pdf-service-backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/: main.py  requirements.txt
backend/config/: config.py
backend/routes/: chat_routes.py
backend/utils/: utils.py
frontend/app/: layout.tsx
frontend/components/: ChatBox.tsx  ChatBubble.tsx  Header.tsx  InputBox.tsx  Logo.tsx  Spinner.tsx
frontend/hooks/: UseChat.ts  UsePDF.ts
(+30 files in other folders)
