[tool.poetry]
name = "pdflow-backend"
version = "0.1.0"
description = ""
authors = ["Sudip Mandal <skmxyt@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
urllib3 = ">=1.25.4,<1.27"
python = "^3.9"
boto3 = "^1.34.145"
fastapi = "^0.111.1"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
langchain-text-splitters = "^0.2.2"
pinecone-client = "^5.0.0"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.3"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.9"
langchain-google-genai = "^1.0.7"
pypdf = "^4.3.1"
supabase = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
